--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,37 +1,46 @@
-<mat-card class="example-card">
-    <form class="example-form">
-        <mat-form-field class="example-full-width">
-            <input matInput placeholder="Email" [formControl]="emailFormControl" [errorStateMatcher]="matcher">
-            <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                Please enter a valid email address
-            </mat-error>
-            <mat-error *ngIf="emailFormControl.hasError('required')">
-                Email is <strong>required</strong>
-            </mat-error>
-        </mat-form-field>
+<div class="signup-form">
+    <mat-card class="signup-card">
+        <mat-card-header>
+            <mat-card-title>Signup form</mat-card-title>
+        </mat-card-header>
 
-        <mat-form-field>
-            <input matInput placeholder="Enter your password" [type]="hide ? 'password' : 'text'">
-            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                [attr.aria-pressed]="hide">
-                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-        </mat-form-field>
+        <form class="signup-profile-form" [formGroup]="signupForm">
 
-        <mat-form-field>
-            <input matInput placeholder="Name on credit card">
-        </mat-form-field>
+            <mat-form-field>
+                <input matInput placeholder="Email" formControlName="email" [errorStateMatcher]="matcher">
+            </mat-form-field>
 
-        <mat-form-field>
-            <input matInput placeholder="Credit Card Number" type="number" class="example-right-align">
-        </mat-form-field>
+            <mat-form-field>
+                <input matInput placeholder="Enter your password" formControlName="password"
+                    [type]="pwdHide ? 'password' : 'text'">
+                <button mat-icon-button matSuffix (click)="pwdHide = !pwdHide" [attr.aria-label]="'Hide password'"
+                    [attr.aria-pressed]="pwdHide">
+                    <mat-icon>{{pwdHide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                </button>
+                <!-- <mat-error *ngIf="pwdValidation">
+                    Password is <strong>Weak</strong>
+                </mat-error> -->
+            </mat-form-field>
 
-        <mat-form-field>
-            <input matInput placeholder="Credit Card Expiration" type="number" class="example-right-align">
-        </mat-form-field>
+            <mat-form-field>
+                <input matInput placeholder="Name on credit card" formControlName="cardName">
+            </mat-form-field>
 
-        <mat-form-field>
-            <input matInput placeholder="Credit Card Security code" class="example-right-align">
-        </mat-form-field>
-    </form>
-</mat-card>
+            <mat-form-field>
+                <input matInput placeholder="Credit Card Number" type="number" formControlName="cardNumber">
+            </mat-form-field>
+
+            <mat-form-field>
+                <input matInput placeholder="Credit Card Expiration" type="number" formControlName="cardExp">
+            </mat-form-field>
+
+            <mat-form-field>
+                <input matInput placeholder="Credit Card Security code" formControlName="cardCode">
+            </mat-form-field>
+
+            <div class="signup-submit-button">
+                <button mat-raised-button color="primary" (click)="signUp()">Sign Up</button>
+            </div>
+        </form>
+    </mat-card>
+</div>
