--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -4,22 +4,27 @@
             <mat-card-title>Signup form</mat-card-title>
         </mat-card-header>
 
-        <form class="signup-profile-form" [formGroup]="signupForm">
+        <form class="signup-profile-form" [formGroup]="signupForm" (ngSubmit)="signUp()" autocomplete="off">
 
             <mat-form-field>
-                <input matInput placeholder="Email" formControlName="email" [errorStateMatcher]="matcher">
+                <input matInput placeholder="Email" formControlName="email" required>
+                <mat-error *ngIf="formData.email.errors">
+                    <mat-error *ngIf="formData.email.errors.required">Email is required</mat-error>
+                    <mat-error *ngIf="formData.email.errors.email">Email must be a valid email address</mat-error>
+                </mat-error>
             </mat-form-field>
 
             <mat-form-field>
                 <input matInput placeholder="Enter your password" formControlName="password"
-                    [type]="pwdHide ? 'password' : 'text'">
+                    [type]="pwdHide ? 'password' : 'text'" required >
                 <button mat-icon-button matSuffix (click)="pwdHide = !pwdHide" [attr.aria-label]="'Hide password'"
                     [attr.aria-pressed]="pwdHide">
                     <mat-icon>{{pwdHide ? 'visibility_off' : 'visibility'}}</mat-icon>
                 </button>
-                <!-- <mat-error *ngIf="pwdValidation">
-                    Password is <strong>Weak</strong>
-                </mat-error> -->
+                <mat-error *ngIf="formData.password.errors">
+                    <mat-error *ngIf="formData.password.errors.required">Password is required</mat-error>
+                    <mat-error *ngIf="formData.password.errors.minlength">Password must be at least 6 characters</mat-error>
+                </mat-error>
             </mat-form-field>
 
             <mat-form-field>
@@ -39,7 +44,7 @@
             </mat-form-field>
 
             <div class="signup-submit-button">
-                <button mat-raised-button color="primary" (click)="signUp()">Sign Up</button>
+                <button mat-raised-button color="primary" [disabled]="!signupForm.valid">Sign Up</button>
             </div>
         </form>
     </mat-card>
